# TetrioOptimizer

./: .gitignore  Cargo.toml  README.md  README_EN.md  adblocker.js  build.rs  context.md  move-dll.py  package-lock.json  package.json  setup.html  tauri.conf.json  test_build.sh  test_integration.sh
.github/workflows/: build.yml  release.yml
capabilities/: default.json
docs/: WINDOWS_TROUBLESHOOTING.md
public/: optimizer.js
src-tauri/: Cargo.toml  build-windows-embed.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  memory_manager.rs  webgl_optimizer.rs
