[package]
name = "tetrio-optimizer"
version = "0.1.0"
edition = "2021"
description = "TETR.IO Ultra Optimized Wrapper"
authors = ["TETR.IO Optimizer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tetrio-optimizer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"